editing ordered lists

--- a/agenda.html
+++ b/agenda.html
@@ -15,30 +15,30 @@
 
     <h2> <b>Topic 1:</b> Title of First Topic </h2>
     <ul>
-        <il>Discussion point list with bullets</il>
-        <il>Second talking point</il>
-        <il>Third talking point</il>
+        <li>Discussion point list with bullets</li>
+        <li>Second talking point</li>
+        <li>Third talking point</li>
     </ul>
 
     <h2><b>Topic 2:</b> Title of Second Topic</h2>
     <ol>
-        <il>Discussion point list with numbers</il>
-        <il>Second talking point</il>
-        <il>Third talking point</il>
+        <li>Discussion point list with numbers</li>
+        <li>Second talking point</li>
+        <li>Third talking point</li>
     </ol>
 
     <h2><b>Topic 3:</b> Title of Third Topic</h2>
-    <ol>
-        <il>Discussion point list with letters</il>
-        <il>Second talking point</il>
-        <il>Third talking point</il>
+    <ol type="A">
+        <li>Discussion point list with letters</li>
+        <li>Second talking point</li>
+        <li>Third talking point</li>
     </ol>
 
     <h2><b>Topic 4:</b> Title of Fourth Topic</h2>
-    <ol>
-        <il>Discussion point with roman numerals</il>
-        <il>Second talking point</il>
-        <il>Third talking point</il>
+    <ol type="I">
+        <li>Discussion point with roman numerals</li>
+        <li>Second talking point</li>
+        <li>Third talking point</li>
     </ol>
 
     <h2>Notes and Action Items</h2>
