adding css and js files

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agenda</title>
+    <link href="styles.css" rel="stylesheet">
+    <link href="script.js">
 </head>
 
 <body>
@@ -11,37 +13,38 @@
 
    
     <h1>Meeting Agenda</h1>
-    Date: Feb 22, 2024 Time:9:00am Location: Room 42
+    
+    <h3 class="date" >Date: Feb 22, 2024 &nbsp; Time:9:00am &nbsp; Location: Room 42</h3>
 
-    <h2> <b>Topic 1:</b> Title of First Topic </h2>
+    <h2 class="topic"> <b>Topic 1:</b> Title of First Topic </h2>
     <ul>
         <li>Discussion point list with bullets</li>
         <li>Second talking point</li>
         <li>Third talking point</li>
     </ul>
 
-    <h2><b>Topic 2:</b> Title of Second Topic</h2>
+    <h2 class="topic"><b>Topic 2:</b> Title of Second Topic</h2>
     <ol>
         <li>Discussion point list with numbers</li>
         <li>Second talking point</li>
         <li>Third talking point</li>
     </ol>
 
-    <h2><b>Topic 3:</b> Title of Third Topic</h2>
+    <h2 class="topic"><b>Topic 3:</b> Title of Third Topic</h2>
     <ol type="A">
         <li>Discussion point list with letters</li>
         <li>Second talking point</li>
         <li>Third talking point</li>
     </ol>
 
-    <h2><b>Topic 4:</b> Title of Fourth Topic</h2>
+    <h2 class="topic"><b>Topic 4:</b> Title of Fourth Topic</h2>
     <ol type="I">
         <li>Discussion point with roman numerals</li>
         <li>Second talking point</li>
         <li>Third talking point</li>
     </ol>
 
-    <h2>Notes and Action Items</h2>
+    <h2 class="notes">Notes and Action Items</h2>
 
      </div>
 </body>
