--- a/index.html
+++ b/index.html
@@ -47,5 +47,7 @@
     <h2 class="notes">Notes and Action Items</h2>
 
      </div>
+
+<footer> Meeting Agenda Templates | @2019 by Vertex42.com | https://www.vertex42.com/WordTemplates/meeting-agenda.html</footer>
 </body>
 </html>
